# Ground-Station-base-on-mavlink

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/backend/: BackendAdapter.cpp  BackendAdapter.h  BackendTypes.h
src/widgets/: AttitudeWidget.cpp  AttitudeWidget.h  BatteryWidget.cpp  BatteryWidget.h  CompassWidget.cpp  CompassWidget.h  MapWidget.cpp  MapWidget.h
